# az-scout-plugin-compare-cost-between-regions

./: README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: publish.yml
src/az_scout_compare_cost_between_regions/: __init__.py  _log.py  pricing.py  routes.py  tools.py
src/az_scout_compare_cost_between_regions/static/css/: compare-cost-between-regions.css
src/az_scout_compare_cost_between_regions/static/html/: compare-cost-between-regions-tab.html
src/az_scout_compare_cost_between_regions/static/js/: compare-cost-between-regions-tab.js
tests/: test_plugin.py  test_pricing.py  test_routes.py  test_tools.py
tools/: check_uom.py  debug_grs.py  explore_matching.py  list_ps_regions.py
